@startuml db_schema
skinparam linetype ortho
skinparam dpi 200

' !theme amiga
' left to right direction
' skinparam BackgroundColor transparent

entity users {
    * id: uuid <<PK>>
    --
    * creation_date: datetime
    * email: varchar
    * hashed_password: varchar
    * role: varchar
    * full_name: varchar
    * contact_consent: boolean
}

entity codon_tables {
    * id: uuid <<PK>>
    --
    user_id: uuid <<FK>>
    * creation_date: datetime
    * name: varchar
    * organism: varchar
    source: varchar
}

entity codon_translations {
    * codon_table_id: uuid <<FK>> <<PK>>
    * codon: varchar(3) <<PK>>
    --
    * anticodon: varchar(3)
    * amino_acid: varchar(3)
    * trna_gcn: float
    * wobble_codon: varchar(3)
    * wobble_rate: float
}

entity results {
    * id: uuid <<PK>>
    --
    user_id: uuid <<FK>>
    * creation_date: datetime
    * host_codon_table_id: uuid
    * sequences_native_codon_tables: json
    * mode: varchar
    * slow_speed_threshold: float
    conservation_threshold: float
}

json sequences_native_codon_tables {
    "seq1": "table1_id",
    "seq2": "table2_id"
}

entity tuned_sequences {
    * id: uuid <<PK>>
    --
    * result_id: uuid <<FK>>
    * name: varchar
    * input: text
    * output: text
    * percentage_identity: float
    * input_profiles: json
    * output_profiles: json
}

json input_profiles {
    "speed": [0.0, 0.0],
    "rank": [0.0, 0.0]
}

json output_profiles {
    "speed": [0.0, 0.0],
    "rank": [0.0, 0.0]
}

users |o--o{ results
users |o--o{ codon_tables
results ||--o{ tuned_sequences
results |o--{ codon_tables
results ||--|| sequences_native_codon_tables
tuned_sequences ||--|| input_profiles
tuned_sequences ||--|| output_profiles
codon_tables ||--|{ codon_translations
@enduml